# mcp-fleet

./: .dockerignore  .gitignore  .mcp.json  CHANGELOG.md  CLAUDE.md  Dockerfile  Dockerfile.all-python  Dockerfile.compass  Dockerfile.of  Dockerfile.orchestration  Dockerfile.python-base  Dockerfile.test  Dockerfile.tides  Dockerfile.toolkit  README.md  claude-desktop-config-local.json  claude-desktop-config.json  claude-desktop-memry-config.json  deno.json  deploy-tides-mcp.sh  docker-compose.yml  main.py  pyproject.toml  pytest.ini  test_mcp_e2e.py  test_mcp_simple.py
.claude/: settings.local.json
.claude/commands/: README.md  fix-github-issue.md  full_test.md  issue-write.md  release.md  review-logs.md  test.md
.github/workflows/: docker-multi-stage.yml  docker-publish.yml  docker-publish.yml.disabled
docs/: README.md  developer-workflow.md
docs/adr/: ADR-0001-python-migration.md  ADR-0002-monorepo-architecture.md  README.md
docs/devlog/: 2025-06-27-architecture-cleanup.md  2025-06-27-open-source-philosophy.md  README.md  developer-workflow.md
docs/pull-requests/: tide-report-file-saving-pr.md
docs/specifications/: tide-report-file-saving.md
docs/specs/: README.md  tide-report-file-saving.md  toolkit-architecture.md  true-microservices-architecture.md
projects/cli/: .orchestration.json  tasks.md
projects/debug-test/: .orchestration.json  tasks.md
projects/flywheel-demo-project/: .orchestration.json  tasks.md
projects/learn-mcp/: learn-mcp.md  learning-new-paradigm.md
projects/learning-photography/: .orchestration.json  tasks.md
projects/meeting-notes/: gemini-meeting-agenda.md  of-implementation-agent-to-agent.md  of-implementation-partnership-meeting-of.md  planning-qbr-meeting.md
projects/neo/: .orchestration.json  tasks.md
projects/pattern-test-project/: .orchestration.json  tasks.md
projects/photo/: .orchestration.json  tasks.md
projects/sunday/: .orchestration.json  tasks.md
projects/test-fix/: .orchestration.json  (+1 more)
python-packages/claude_client/: __init__.py  conversation.py  pyproject.toml
python-packages/common_tools/: git_tools.py  pyproject.toml
python-packages/mcp_core/: __init__.py  pyproject.toml  server.py  transport.py  types.py
python-servers/of/: __init__.py  main.py  pyproject.toml  test_templates.py  validate_templates.py
python-servers/of/src/: __init__.py  pattern_manager.py  prompt_manager.py  template_engine.py  workspace_manager.py
python-servers/of/src/tools/: __init__.py  of_tools.py
python-servers/of/templates/patterns/software/: product_requirement_doc.md
python-servers/of/templates/prompts/: execution.md  exploration.md  gap_analysis.md  session_continuation.md  specification.md
scripts/: docker-hub-publish.sh
servers/compass/: DEVELOPMENT.md  README.md  USAGE.md  __init__.py  deno.json  main.py  mcp_main.ts  pyproject.toml
servers/compass/src/: __init__.py  exploration_tools.py  project_manager.py  project_tools.py  server.ts
servers/compass/src/managers/: __init__.py  project-manager.ts  project_manager.py
servers/compass/src/tools/: __init__.py  execution-tools.ts  exploration-tools.ts  project-tools.ts  specification-tools.ts
servers/compass/tests/e2e/: .gitignore  complete-lifecycle.test.ts  full-project-lifecycle.test.ts
servers/compass/tests/e2e/complete-lifecycle-workspace/ai-productivity-assistant/: .compass.json  tasks.md
servers/compass/tests/e2e/complete-lifecycle-workspace/ai-productivity-assistant/execution/: execution-plan.md  tasks.json
servers/compass/tests/e2e/complete-lifecycle-workspace/ai-productivity-assistant/exploration/: completion-override.md  conversation-1.md  conversation-2.md
servers/compass/tests/e2e/complete-lifecycle-workspace/ai-productivity-assistant/specification/: specification-software_product_requirements-2025-06-26T12-41-00-541Z.md
servers/compass/tests/e2e/test-workspace/sample-ecommerce-platform/: .compass.json  tasks.md
servers/compass/tests/e2e/test-workspace/sample-ecommerce-platform/exploration/: completion-override.md  conversation-1.md  conversation-2.md
servers/compass/tests/integration/: exploration-specification-workflow.test.ts  project-exploration-workflow.test.ts  specification-execution-workflow.test.ts
servers/compass/tests/unit/: server.test.ts
servers/compass/tests/unit/managers/: project-manager.test.ts
servers/compass/tests/unit/tools/: execution-tools.test.ts  exploration-tools.test.ts  project-tools.test.ts  specification-tools.test.ts
servers/local/: __init__.py  main.py  mcp_main.py  pyproject.toml
servers/local/src/: __init__.py
servers/local/src/tools/: __init__.py  apple_notes_tools.py
servers/local/tests/: standalone_test_server.py  test_apple_notes_tools.py
servers/memry/: README.md  __init__.py  main.py  pyproject.toml
servers/memry/src/: __init__.py  memory_models.py  memory_tools.py
servers/memry/src/models/: memory_models.py
servers/memry/src/storage/: __init__.py  memory_storage.py
servers/memry/src/tools/: __init__.py  memory_tools.py
servers/tides/: README.md  USAGE.md  __init__.py  deno.json  main.py  mcp_main.ts  pyproject.toml
servers/tides/src/: __init__.py  tide_storage.py  tide_tools.py
servers/tides/src/storage/: index.ts  tide-storage.ts
servers/tides/src/tools/: __init__.py  report-tools.ts  tide-tools.ts
servers/tides/tests/: diagnostic.ts
servers/tides/tests/integration/: mcp-server.test.ts  persistence.test.ts
servers/tides/tests/unit/: report-tools.test.ts  tide-storage.test.ts
servers/toolkit/: README.md  USAGE.md  deno.json  main.py  mcp_main.ts  pyproject.toml
servers/toolkit/src/: __init__.py
servers/toolkit/src/tools/: __init__.py  drafts_tools.py  file-tools.ts  file_tools.py
servers/toolkit/tests/integration/: toolkit-integration.test.ts
servers/toolkit/tests/servers/toolkit/: test_drafts_tools.py
servers/toolkit/tests/unit/: file-tools.test.ts
servers/yogateach/: __init__.py  main.py  pyproject.toml
servers/yogateach/src/: __init__.py  yoga_tools.py
servers/yogateach/templates/: setlist.md  talk.md
tests/: __init__.py
(+104 files in other folders)
