[project]
name = "claude-client"
version = "0.1.0"
description = "Enhanced Anthropic Claude API client with retry logic and conversation management"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.25.0",
    "pydantic>=2.0.0",
    "typing-extensions>=4.8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["claude_client"]