[project]
name = "memry"
version = "3.0.0"
description = "MCP-Memry memory storage system for Claude interactions"
requires-python = ">=3.11"
dependencies = [
    "mcp-core",
    "mcp-storage",
    "common-tools",
    "mcp>=1.0.0",
    "pydantic>=2.0.0",
    "aiofiles>=23.2.0",
    "pyyaml>=6.0.0",
]

[tool.uv.sources]
mcp-core = { workspace = true }
mcp-storage = { workspace = true }
common-tools = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]