[project]
name = "memry"
version = "4.1.0"
description = "MCP-Memry memory storage system for Claude interactions"
requires-python = ">=3.11"
dependencies = [
    "core",
    "storage",
    "mcp>=1.0.0",
    "pydantic>=2.0.0",
    "aiofiles>=23.2.0",
    "pyyaml>=6.0.0",
]

[tool.uv.sources]
core = { workspace = true }
storage = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]