[project]
name = "tides"
version = "3.0.0"
description = "Rhythmic workflow management based on natural tidal patterns"
requires-python = ">=3.11"
dependencies = [
    "core",
    "mcp>=1.0.0",
    "pydantic>=2.0.0",
    "aiofiles>=23.2.0",
]

[tool.uv.sources]
core = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]