[project]
name = "toolkit"
version = "3.0.0"
description = "Essential file operations and utility tools for MCP servers"
requires-python = ">=3.11"
dependencies = [
    "core",
    "common-tools",
    "mcp>=1.0.0",
    "pydantic>=2.0.0",
    "aiofiles>=23.2.0",
]

[tool.uv.sources]
core = { workspace = true }
common-tools = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]