[project]
name = "yogateach"
version = "4.1.0"
description = "Yoga instruction and dharma talk generation through templated content creation"
requires-python = ">=3.11"
dependencies = [
    "core",
    "storage",
    "templates",
    "mcp>=1.0.0",
    "pydantic>=2.0.0",
    "aiofiles>=23.2.0",
]

[tool.uv.sources]
core = { workspace = true }
storage = { workspace = true }
templates = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]